first submission for 613 project

--- a/WebContent/baseFilter.html
+++ b/WebContent/baseFilter.html
@@ -27,7 +27,7 @@ input{ margin: 5px 5px; }
 </style>
 
 <!--引入jquery的js库-->
-<script src="../js/jquery-1.4.2.js"></script>
+<script src="js/jquery-1.4.2.js"></script>
 <script type="text/javascript">
 	$(function() {
 		/* ---------基本过滤选择器练习--------- */
