--- a/WebContent/cong1.html
+++ b/WebContent/cong1.html
@@ -34,7 +34,7 @@ h1{
 	</h1>	
 	
 	<form method="post" action="Update">
-		<input type="submit" id="a" name="update" value="阶段二">
+		<input type="submit" id="a" name="update" value="next level!">
 
 	</form>
 	
