--- a/WebContent/laoyi3.html
+++ b/WebContent/laoyi3.html
@@ -29,7 +29,7 @@
 
 	p{
 		font-size: 26px;
-		margin-left: 485px;
+		margin-left: 675px;
 	}
 </style>
 
@@ -44,10 +44,10 @@
 			重新登录
 		</a>		
 	</h1>	 -->
-	<form method="post" action="video3.jsp"
-		onkeydown="if(event.keyCode==13)return false;">
-	<input id="button" type="submit" name="laoyi" value="你今天已经学习了8秒，请注意劳逸结合！" /> 
-					<span id="span1"></span>
+	<form method="post" action="video3.jsp" onkeydown="if(event.keyCode==13)return false;">
+	<input id="button" type="submit" name="laoyi" value="你今天已经学习了20秒，请注意劳逸结合！" /> 
+	</form>
+	<span id="span1"></span>
 	<p>（点上方休息）</p>
 </body>
 </html>
