--- a/WebContent/cong2.html
+++ b/WebContent/cong2.html
@@ -34,7 +34,7 @@ h1{
 	</h1>	
 	
 	<form method="post" action="Update">
-		<input type="submit" id="a" name="update" value="阶段三">
+		<input type="submit" id="a" name="update" value="next level!!">
 	</form>
 	
 </body>
