--- a/WebContent/laoyi1.html
+++ b/WebContent/laoyi1.html
@@ -30,7 +30,7 @@
 
 	p{
 		font-size: 26px;
-		margin-left: 450px;
+		margin-left: 675px;
 	}
 </style>
 
@@ -47,7 +47,8 @@
 	</h1>	 -->
 	<form method="post" action="video.jsp"
 		onkeydown="if(event.keyCode==13)return false;">
-	<input id="button" type="submit" name="laoyi" value="你今天已经学习了8秒，请注意劳逸结合！" /> 
+	<input id="button" type="submit" name="laoyi" value="你今天已经学习了20秒，请注意劳逸结合！" /> 
+	</form>
 					<span id="span1"></span>
 	<p>（点上方休息）</p>
 </body>
